wip: improved verses pagination
